--- a/RainTPL/composer.json
+++ b/RainTPL/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "rain/raintpl": ">=3.0.0"
+        "rain/raintpl": ">=3.0.0",
+        "phpmailer/phpmailer": "~6.0"
     }
 }
